# vegetable_patch

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
_path_utils/: pytest.ini
_path_utils/src/: utils.py
_path_utils/testing/: test_utils.py
dataframe_utils/src/: utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
path_utils/src/: utils.py
src/vegetable_patch/: __init__.py
src/vegetable_patch/dataframe_utils/: utils.py
src/vegetable_patch/dataframe_utils/src/: utils.py
src/vegetable_patch/path_utils/: setup.py
src/vegetable_patch/string_utils/: utils.py
src/vegetable_patch/string_utils/src/: utils.py
tests/: __init__.py  test_path_utils.py  test_string_utils.py  test_vegetable_patch.py
