[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vegetable_patch"
version = "0.1.0"
description = "Package containing various utils."
readme = "README.rst"
authors = [
  {name = "Marius Dobbe Klemetsen", email = "marius.klemetsen@outlook.com"}
]
maintainers = [
  {name = "Marius Dobbe Klemetsen", email = "marius.klemetsen@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/TheBioinformaticalGardener/vegetable_patch/issues"
changelog = "https://github.com/TheBioinformaticalGardener/vegetable_patch/blob/master/changelog.md"
homepage = "https://github.com/TheBioinformaticalGardener/vegetable_patch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

